Bug 47811 - RTF : LO does not recognize mailing fields
Summary: RTF : LO does not recognize mailing fields
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-03-24 11:10 UTC by Jean-Baptiste Faure
Modified: 2019-10-15 07:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
RTF file with mailing fields (290.07 KB, application/rtf)
2012-03-24 11:10 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2012-03-24 11:10:08 UTC
Created attachment 58982 [details]
RTF file with mailing fields

When opening the attached RTF file LO 3.3.4 recognize some fields as mailing fields: if you double-click on such kind of field, LO opens a dialog which allow to map these fields on database recorder.
When opening the same file with LO 3.5.x nothing happens when you double-click on these fields.

Saving the RTF file as ODF file in LO 3.3.4, does not allow to preserve the mailing fields

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2012-03-24 11:26:20 UTC
The bugdoc is a document used as template by French administration.

Miklos: I guess this one is for you. Maybe it is related to bug 42109.
Please, feel free to reassign if you can't handle this bug.

Best regards. JBF
Comment 2 Michael Stahl 2014-03-03 12:58:04 UTC
since i fixed writerfilter's field parameter import i was looking for RTF field import bugs, and this is pretty much the only one?

required a bit of additional work, but now it's working like in the old RTF filter; however have no idea how to create Database fields that
actually _work_ with the info that's in the RTF field.
Comment 3 Commit Notification 2014-03-03 12:58:18 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c06f686fe001392ceb7f606f5dc3c775997cc7de

fdo#47811: fix setPropertyValue("Name") of Database fieldmaster



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-03-03 12:58:32 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e24ae38c8ef233e4b44840058e35959194724743

fdo#47811: RTF import: fix Database field content



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-03-04 14:41:07 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1609eb8d6e9b8d9b4d82be5c46656d4d43256125&h=libreoffice-4-2

fdo#47811: fix setPropertyValue("Name") of Database fieldmaster


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-03-04 14:49:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9a32be03681a595ce075e6fc6d6c60494a70a2fb&h=libreoffice-4-2

fdo#47811: RTF import: fix Database field content


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Robinson Tryon (qubit) 2015-12-17 12:05:37 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]