fdo#47811: fix setPropertyValue("Name") of Database fieldmaster

This one is assigning to the wrong pType variable.

(regression from CWS swwarnings)

Change-Id: I9a74734d22313f215ed69c9a57edf7eb035736ea
(cherry picked from commit c06f686fe001392ceb7f606f5dc3c775997cc7de)